[tool.poetry]
name = "VIDEO THUMBNAILER"
version = "0.0.1"
description = "CATTO SIDE PROJECT"
authors = ["CattoKudasai <t.kriangsak466@gmail@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
